--- a/winery.html
+++ b/winery.html
@@ -23,7 +23,7 @@
 			<div class="center">
 
 			<a href="http://www.shanaz.co/portfolio"><i class="fa fa-arrow-left fa-4x"></i></a>
-			<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
+			<a href="index.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
 			<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
 			<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
 			<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
