--- a/gym.html
+++ b/gym.html
@@ -17,24 +17,12 @@
 </head>
 <body>
 <div class="grid">
-
-<div class="col_12">
-
-			<div class="center">
-
-			<a href="http://www.shanaz.co/portfolio"><i class="fa fa-arrow-left fa-4x"></i></a>
-			<a href="index.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
-			<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
-			<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
-			<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
-			</div>
-
-
 	<div class="col_12"><hr>
 		<h1 class="center">Fun-N-Fitness Gymnastics Redesign</h1>
-		<h4 class="center">Click the tabs below to see before and after images of each page.</h2>
-		<hr>
-		<ul class="tabs left">
+			<p>Fun-N-Fitness Gymnastics is a fantastic children gymnastics center in the midwest. Initially, the website lacked responsiveness, clear organization, and unique branding. I updated the each page of the website, ensuring that each page had logical and consistent layouts that were readable and on-brand. </p>
+		<h4 class="center">Click the tabs below to see before and after images of each page.</h4>
+
+		<ul class="tabs center">
 			<li><a href="#tabr1">Home</a></li>
 			<li><a href="#tabr2">About</a></li>
 			<li><a href="#tabr3">Birthdays</a></li>
@@ -47,8 +35,10 @@
 
 		</ul>
 
+	</div>
+
 		<div id="tabr1" class="tab-content">
-			<h2 class="center">Home Page</h2>
+<!-- 			<h2 class="center">Home Page</h2> -->
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/home.png">
@@ -60,7 +50,7 @@
 		</div>
 
 		<div id="tabr2" class="tab-content">
-			<h2 class="center">About Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/about.png">
@@ -72,7 +62,7 @@
 		</div>
 
 		<div id="tabr3" class="tab-content">
-			<h2 class="center">Birthdays Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/birthdays.png">
@@ -84,7 +74,7 @@
 		</div>
 
 		<div id="tabr4" class="tab-content">
-			<h2 class="center">Classes Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/classes.png">
@@ -96,7 +86,7 @@
 		</div>
 
 		<div id="tabr5" class="tab-content">
-			<h2 class="center">Contact Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/contact.png">
@@ -108,7 +98,7 @@
 		</div>
 
 		<div id="tabr6" class="tab-content">
-			<h2 class="center">New Happenings(!) Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/new.png">
@@ -120,7 +110,7 @@
 		</div>
 
 		<div id="tabr7" class="tab-content">
-			<h2 class="center">Schedule Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/schedule.png">
@@ -132,7 +122,7 @@
 		</div>
 
 		<div id="tabr8" class="tab-content">
-			<h2 class="center">Staff Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/staff.png">
@@ -144,7 +134,7 @@
 		</div>
 
 		<div id="tabr9" class="tab-content">
-			<h2 class="center">Tuition Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/tuition.png">
@@ -157,22 +147,16 @@
 
 
 
+	<hr>
+			<div class="center">
 
 
-
-
-
-
-
-
-
-
-
-		<!-- <div class="col_12 center">
-			<h3 class="center"><a href="http://www.shanaz.co/gym" target="_blank">Fun-N-Fitness</h3>
-		</div> -->
-
-	</div>
+			<a href="http://www.shanaz.co/portfolio"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=home" width="200" height="100" /></a>
+			<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
+			<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
+			<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
+			<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
+			</div>
 
 
 </div> <!-- End Grid -->
