--- a/wedding.html
+++ b/wedding.html
@@ -17,25 +17,12 @@
 </head>
 <body>
 <div class="grid">
-
-<div class="col_12">
-
-			<div class="center">
-
-			<a href="http://www.shanaz.co/portfolio"><i class="fa fa-arrow-left fa-4x"></i></a>
-			<a href="index.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
-			<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
-			<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
-			<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
-			</div>
-
-
 	<div class="col_12"><hr>
 		<h1 class="center">Wedding Planner Redesign</h1>
-		<h4 class="center">bon soirée offers full service wedding planning. Initially, the website was difficult to navigate on a mobile device, lacked fluidity in its design, and didn't showcase the planner's amazing work.</h4><h4 class="center"> I updated the logo, consolidated the multi-page website into a single-page layout, and made it responsive. </h4><hr>
+			<p>bon soirée offers full service wedding planning. Initially, the website was difficult to navigate on a mobile device, lacked fluidity in its design, and didn't showcase the planner's amazing work. I updated the logo, consolidated the multi-page website into a single-page layout, and made it responsive. </p>
+		<h4 class="center">Click the tabs below to see before and after images of each page.</h4>
 
-		<!-- Gallery -->
-		<ul class="tabs left">
+		<ul class="tabs center">
 			<li><a href="#tabr1">Home</a></li>
 			<li><a href="#tabr2">About</a></li>
 			<li><a href="#tabr3">Bio</a></li>
@@ -43,8 +30,10 @@
 
 		</ul>
 
+	</div>
+
 		<div id="tabr1" class="tab-content">
-			<h2 class="center">Home Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/wedding-home.png">
@@ -56,7 +45,7 @@
 		</div>
 
 		<div id="tabr2" class="tab-content">
-			<h2 class="center">About Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/wedding-about.png">
@@ -68,7 +57,7 @@
 		</div>
 
 		<div id="tabr3" class="tab-content">
-			<h2 class="center">Bio Page</h2>
+
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/wedding-diane.png">
@@ -80,7 +69,7 @@
 		</div>
 
 		<div id="tabr4" class="tab-content">
-			<h2 class="center">Contact Page</h2>
+			
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/wedding-contact.png">
@@ -91,25 +80,18 @@
 			</div>
 		</div>
 
+		<hr>
 
 
+			<div class="center">
 
 
-
-
-
-
-
-
-
-
-
-
-		<!-- <div class="col_12 center">
-			<h3 class="center"><a href="http://www.shanaz.co/gym" target="_blank">Fun-N-Fitness</h3>
-		</div> -->
-
-	</div>
+			<a href="http://www.shanaz.co/portfolio"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=home" width="200" height="100" /></a>
+			<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
+			<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
+			<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
+			<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
+			</div>
 
 
 </div> <!-- End Grid -->
