Links to actual websites

--- a/dentist.html
+++ b/dentist.html
@@ -39,7 +39,7 @@ href="images/exclamation_point.png">
 								</div>
 								<div class="col_6">
 									<h3 class="center">After</h3>
-									<img src="assets/dentist_after.png">
+									<a href="https://www.shanaz.co/dentist" target="_blank"><img src="assets/dentist_after.png"></a>
 								</div>
 					</div>
 
