--- a/gym.html
+++ b/gym.html
@@ -48,7 +48,7 @@ href="images/exclamation_point.png">
 			</div>
 			<div class="col_6">
 				<h3 class="center">After</h3>
-				<img src="assets/home-after.png">
+			<a href="https://www.shanaz.co/gym/" target="_blank">	<img src="assets/home-after.png"></a>
 			</div>
 		</div>
 
@@ -144,7 +144,7 @@ href="images/exclamation_point.png">
 			</div>
 			<div class="col_6">
 				<h3 class="center">After</h3>
-				<img src="assets/tuition-after.png">
+				<a href="https://www.shanaz.co/gym/" target="_blank"><img src="assets/tuition-after.png"></a>
 			</div>
 		</div>
 
