--- a/wedding.html
+++ b/wedding.html
@@ -43,7 +43,7 @@ href="images/exclamation_point.png">
 			</div>
 			<div class="col_6">
 				<h3 class="center">After</h3>
-				<img src="assets/wedding-after.png">
+				<a href="https://www.shanaz.co/bon_soiree2/"><img src="assets/wedding-after.png"></a>
 			</div>
 		</div>
 
