--- a/winery.html
+++ b/winery.html
@@ -56,7 +56,7 @@
 																</div>
 																<div class="col_6">
 																	<h3 class="center">After</h3>
-																	<img src="assets/winery_after.png">
+																	<a href="http://www.shanaz.co/PC/" target="_blank"><img src="assets/winery_after.png"></a>
 																</div>
 													</div>
 
