--- a/wedding.html
+++ b/wedding.html
@@ -84,7 +84,10 @@ href="images/exclamation_point.png">
 		</div>
 
 		<hr>
-
+		<div class="center">
+			<div class="col_12">
+				<h1 class="center">Shanaz F. Chowdhery!</h1>
+			</div>
 
 			<div class="center">
 				<a href="http://www.shanaz.co/portfolio"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
