--- a/winery.html
+++ b/winery.html
@@ -38,6 +38,7 @@
 											<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 											<script type="text/javascript" src="js/kickstart.js"></script>
 										</head>
+
 										<body>
 										<div class="grid">
 											<div class="col_12"><hr>
@@ -58,13 +59,16 @@
 																	<h3 class="center">After</h3>
 																	<a href="http://www.shanaz.co/PC/" target="_blank"><img src="assets/winery_after.png"></a>
 																</div>
-													</div>
 
+													</div>
+													
 
 
 											<hr>
 													<div class="center">
-
+														<div class="col_12">
+															<h1 class="center">Shanaz F. Chowdhery!</h1>
+														</div>
 														<a href="http://www.shanaz.co/portfolio"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
 														<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
 														<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
