Nav bar link updates; added hover

--- a/gym.html
+++ b/gym.html
@@ -20,6 +20,14 @@ href="images/exclamation_point.png">
 </head>
 <body>
 <div class="grid">
+	<div class="center">
+		<div class="col_12">
+			<h1 class="center">Shanaz F. Chowdhery!</h1>
+		</div>
+	
+
+
+</div>
 	<div class="col_12"><hr>
 		<h1 class="center">Fun-N-Fitness Gymnastics Redesign</h1>
 			<p>Fun-N-Fitness Gymnastics is a fantastic children gymnastics center in the midwest. Initially, the website lacked responsiveness, clear organization, and unique branding. I updated the each page of the website, ensuring that each page had logical and consistent layouts that were readable and on-brand. </p>
@@ -152,18 +160,14 @@ href="images/exclamation_point.png">
 
 	<hr>
 	<div class="center">
-		<div class="col_12">
-			<h1 class="center">Shanaz F. Chowdhery!</h1>
-		</div>
 			<div class="center">
-			<a href="http://www.shanaz.co/portfolio"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
+			<a href="http://www.shanaz.co/"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
 			<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
 			<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
 			<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
 			<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
 			</div>
-
-
+		</div>
 </div> <!-- End Grid -->
 </body>
 </html>
