--- a/dentist.html
+++ b/dentist.html
@@ -1,6 +1,3 @@
-
-
-
 		<!DOCTYPE html>
 		<html>
 		<head>
@@ -44,18 +41,16 @@ href="images/exclamation_point.png">
 					</div>
 
 
-<hr>
+					<hr>
 					<div class="center">
-						<div class="center">
-							<div class="col_12">
-								<h1 class="center">Shanaz F. Chowdhery!</h1>
+							<div class="center">
+							<a href="http://www.shanaz.co/"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
+							<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
+							<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
+							<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
+							<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
 							</div>
-						<a href="http://www.shanaz.co/portfolio"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
-						<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
-						<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
-						<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
-						<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
-					</div>
+						</div>
 
 
 		</div> <!-- End Grid -->
