--- a/dentist.html
+++ b/dentist.html
@@ -17,42 +17,53 @@ href="images/exclamation_point.png">
 			<!-- Javascript -->
 			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 			<script type="text/javascript" src="js/kickstart.js"></script>
+			<script src="https://kit.fontawesome.com/65391ef095.js" crossorigin="anonymous"></script> <!--FontAwesome-->
 		</head>
 		<body>
 		<div class="grid">
-			<div class="col_12"><hr>
-
-
+			<div class="col_12">
+				<header>
+					<div class="center">
+						<ul class="button-bar">
+							<li><a href="gym.html">Gym</a></li>
+							<li><a href="dentist.html"> Dentist</a></li>
+							<li><a href="winery.html"> Winery</a></li>
+							<li><a href="wedding.html"> Wedding</a></li>
+							<li><a href="EER.html"> Escape</a></li>
+							<li><a href="LF.html">Bistro</a></li>
+							<li><a href="Mailto:shanazfc@gmail.com">Contact</a></li>
+						</ul>
+					</div>
+				</header>
 						<h1 class="center">Alexandria Center of Dentistry Redesign</h1>
 						<p>Alexandria Center of Dentistry provides somes of the best dental care in all of Virginia. Initially, the website was not mobile-responsive, appeared outdated, and was overly cluttered. I updated the main page, consolidating much of the important information into a single-page layout, and made it responsive. </p>
-
-
 			</div>
-
 				<div id="tabr1" class="tab-content">
 								<div class="col_6">
 									<h3 class="center">Before</h3>
-									<img src="assets/dentist_before.png">
+									<img src="assets/dentist/dentist_before.png">
 								</div>
 								<div class="col_6">
 									<h3 class="center">After</h3>
-									<a href="https://www.shanaz.co/dentist" target="_blank"><img src="assets/dentist_after.png"></a>
+									<a href="https://sfc-dentist.netlify.com/index.html" target="_blank"><img src="assets/dentist/dentist_after.png"></a>
 								</div>
 					</div>
 
 
 					<hr>
-					<div class="center">
-							<div class="center">
-							<a href="http://www.shanaz.co/"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
-							<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
-							<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
-							<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
-							<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
-							</div>
+					<footer>
+						<div class="center">
+							<ul class="button-bar">
+								<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
+								<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
+								<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
+								<li><a href="wedding.html"><i class="fa fa-heart"></i> Wedding</a></li>
+								<li><a href="EER.html"><i class="fas fa-door-open"></i> Escape</a></li>
+								<li><a href="LF.html"><i class="fas fa-cheese"></i> Bistro</a></li>
+								<li><a href="Mailto:shanazfc@gmail.com"><i class="fas fa-envelope"></i> Contact</a></li>
+							</ul>
 						</div>
-
-
+					</footer>
 		</div> <!-- End Grid -->
 		</body>
 		</html>
