--- a/wedding.html
+++ b/wedding.html
@@ -17,13 +17,26 @@ href="images/exclamation_point.png">
 	<!-- Javascript -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/kickstart.js"></script>
+	<script src="https://kit.fontawesome.com/65391ef095.js" crossorigin="anonymous"></script> <!--FontAwesome-->
 </head>
 <body>
 <div class="grid">
-	<div class="col_12"><hr>
+	<div class="col_12">
+		<header>
+			<div class="center">
+				<ul class="button-bar">
+					<li><a href="gym.html">Gym</a></li>
+					<li><a href="dentist.html"> Dentist</a></li>
+					<li><a href="winery.html"> Winery</a></li>
+					<li><a href="wedding.html"> Wedding</a></li>
+					<li><a href="EER.html"> Escape</a></li>
+					<li><a href="LF.html">Bistro</a></li>
+					<li><a href="Mailto:shanazfc@gmail.com">Contact</a></li>
+				</ul>
+			</div>
+		</header>
 		<h1 class="center">Wedding Planner Redesign</h1>
-			<p>bon soirée offers full service wedding planning. Initially, the website was difficult to navigate on a mobile device, lacked fluidity in its design, and didn't showcase the planner's amazing work. I updated the logo, consolidated the multi-page website into a single-page layout, and made it responsive. </p>
-		<h4 class="center">Click the tabs below to see before and after images of each page.</h4>
+			<p>bon soirée offers full service wedding planning. Initially, the website was difficult to navigate on a mobile device, lacked fluidity in its design, and didn't showcase the planner's amazing work. I updated the logo, consolidated the multi-page website into a single-page layout, and made it responsive. Click the tabs below to see before and after images of each page.</p>
 
 		<ul class="tabs center">
 			<li><a href="#tabr1">Home</a></li>
@@ -39,11 +52,11 @@ href="images/exclamation_point.png">
 
 			<div class="col_6">
 				<h3 class="center">Before</h3>
-				<img src="assets/wedding-home.png">
+				<img src="assets/wedding/wedding-home.png">
 			</div>
 			<div class="col_6">
 				<h3 class="center">After</h3>
-				<a href="https://www.shanaz.co/bon_soiree2/"><img src="assets/wedding-after.png"></a>
+				<a href="https://sfc-wedding.netlify.com/index.html" target="_blank"><img src="assets/wedding/wedding-after.png"></a>
 			</div>
 		</div>
 
@@ -51,11 +64,11 @@ href="images/exclamation_point.png">
 
 			<div class="col_6">
 				<h3 class="center">Before</h3>
-				<img src="assets/wedding-about.png">
+				<img src="assets/wedding/wedding-about.png">
 			</div>
 			<div class="col_6">
 				<h3 class="center">After</h3>
-				<img src="assets/wedding-after.png">
+				<img src="assets/wedding/wedding-after.png">
 			</div>
 		</div>
 
@@ -63,11 +76,11 @@ href="images/exclamation_point.png">
 
 			<div class="col_6">
 				<h3 class="center">Before</h3>
-				<img src="assets/wedding-diane.png">
+				<img src="assets/wedding/wedding-diane.png">
 			</div>
 			<div class="col_6">
 				<h3 class="center">After</h3>
-				<img src="assets/wedding-after.png">
+				<img src="assets/wedding/wedding-after.png">
 			</div>
 		</div>
 
@@ -75,32 +88,27 @@ href="images/exclamation_point.png">
 
 			<div class="col_6">
 				<h3 class="center">Before</h3>
-				<img src="assets/wedding-contact.png">
+				<img src="assets/wedding/wedding-contact.png">
 			</div>
 			<div class="col_6">
 				<h3 class="center">After</h3>
-				<img src="assets/wedding-after.png">
+				<img src="assets/wedding/wedding-after.png">
 			</div>
 		</div>
-
-		<hr>
+		<footer>
 		<div class="center">
-			<div class="col_12">
-				<h1 class="center">Shanaz F. Chowdhery!</h1>
-			</div>
-
-			<hr>
 			<div class="center">
-					<div class="center">
-					<a href="http://www.shanaz.co/"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
-					<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
-					<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
-					<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
-					<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
-					</div>
-				</div>
-
-
+				<ul class="button-bar">
+					<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
+					<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
+					<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
+					<li><a href="wedding.html"><i class="fa fa-heart"></i> Wedding</a></li>
+					<li><a href="EER.html"><i class="fas fa-door-open"></i> Escape</a></li>
+					<li><a href="LF.html"><i class="fas fa-cheese"></i> Bistro</a></li>
+					<li><a href="Mailto:shanazfc@gmail.com"><i class="fas fa-envelope"></i> Contact</a></li>
+				</ul>
+			</div>
+		</footer>
 </div> <!-- End Grid -->
 </body>
 </html>
