--- a/winery.html
+++ b/winery.html
@@ -1,82 +1,70 @@
-<!--
-							<div class="col_12"><hr>
-								<h1 class="center">Philip Carter Winery Redesign</h1>
-								<h4 class="center">Philip Carter Winery is one of the oldest wineries in America, dating back to the 17th Century. Their website struggled from clutter -- it simply had too much information to showcase. The messy website isn't at all indicative of the incredible wines they serve. I created a polished landing page for them and offered to build out the rest of their site. </h4>
 
-									<h2 class="center">Home Page</h2>
-									<div class="col_6">
-										<h3 class="center">Before</h3>
-										<img src="assets/winery_before.png">
-									</div>
-									<div class="col_6">
-										<h3 class="center">After</h3>
-										<img src="assets/winery-after.png">
-									</div>
-								</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<!-- META -->
+	<title>ShanazFC - Winery Redesign</title>
+	<link rel="icon" type="image/png" href="images/exclamation_point.png">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="description" content="" />
 
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/kickstart.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
+	<!-- Javascript -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/kickstart.js"></script>
+	<script src="https://kit.fontawesome.com/65391ef095.js" crossorigin="anonymous"></script> <!--FontAwesome-->
 
- -->
+</head>
 
-										<!DOCTYPE html>
-										<html>
-										<head>
-											<!-- META -->
-											<title>ShanazFC - Winery Redesign</title>
-    <link rel="icon"
-       type="image/png"
-       href="images/exclamation_point.png">
-											<meta charset="UTF-8">
-											<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-											<meta name="description" content="" />
+<body>
+<div class="grid">
+	<div class="col_12">
+		<header>
+			<div class="center">
+				<ul class="button-bar">
+					<li><a href="gym.html">Gym</a></li>
+					<li><a href="dentist.html"> Dentist</a></li>
+					<li><a href="winery.html"> Winery</a></li>
+					<li><a href="wedding.html"> Wedding</a></li>
+					<li><a href="EER.html"> Escape</a></li>
+					<li><a href="LF.html">Bistro</a></li>
+					<li><a href="Mailto:shanazfc@gmail.com">Contact</a></li>
+				</ul>
+			</div>
+		</header>
+				<h1 class="center">Philip Carter Winery Redesign</h1>
+				<p>Philip Carter Winery is one of the oldest wineries in America, dating back to the 17th Century. Their website struggled from clutter -- it simply had too much information to showcase. The messy website isn't at all indicative of the incredible wines they serve. I created a polished landing page for them and offered to build out the rest of their site.</p>
+	</div>
 
-											<!-- CSS -->
-											<link rel="stylesheet" type="text/css" href="css/kickstart.css" media="all" />
-											<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+		<div id="tabr1" class="tab-content">
+						<div class="col_6">
+							<h3 class="center">Before</h3>
+							<img src="assets/winery/winery_before.png">
+						</div>
+						<div class="col_6">
+							<h3 class="center">After</h3>
+							<a href="https://sfc-pc.netlify.com/index.html" target="_blank"><img src="assets/winery/winery_after.png"></a>
+						</div>
+			</div>
+			<hr>
+			<footer>
+				<div class="center">
+					<ul class="button-bar">
+						<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
+						<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
+						<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
+						<li><a href="wedding.html"><i class="fa fa-heart"></i> Wedding</a></li>
+						<li><a href="EER.html"><i class="fas fa-door-open"></i> Escape</a></li>
+						<li><a href="LF.html"><i class="fas fa-cheese"></i> Bistro</a></li>
+						<li><a href="Mailto:shanazfc@gmail.com"><i class="fas fa-envelope"></i> Contact</a></li>
+					</ul>
+				</div>
+			</footer>
 
-											<!-- Javascript -->
-											<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-											<script type="text/javascript" src="js/kickstart.js"></script>
-										</head>
-
-										<body>
-										<div class="grid">
-											<div class="col_12"><hr>
-
-
-														<h1 class="center">Philip Carter Winery Redesign</h1>
-														<p>Philip Carter Winery is one of the oldest wineries in America, dating back to the 17th Century. Their website struggled from clutter -- it simply had too much information to showcase. The messy website isn't at all indicative of the incredible wines they serve. I created a polished landing page for them and offered to build out the rest of their site.</p>
-
-
-											</div>
-
-												<div id="tabr1" class="tab-content">
-																<div class="col_6">
-																	<h3 class="center">Before</h3>
-																	<img src="assets/winery_before.png">
-																</div>
-																<div class="col_6">
-																	<h3 class="center">After</h3>
-																	<a href="http://www.shanaz.co/PC/" target="_blank"><img src="assets/winery_after.png"></a>
-																</div>
-
-													</div>
-
-
-
-													<hr>
-													<div class="center">
-															<div class="center">
-															<a href="http://www.shanaz.co/"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=shanaz.co" width="200" height="100" /></a>
-															<a href="gym.html"><img src="http://placehold.it/200x100/4D99E0/ffffff.png&text=gym" width="200" height="100" /></a>
-															<a href="dentist.html"><img src="http://placehold.it/200x100/75CC00/ffffff.png&text=dentist" width="200" height="100" /></a>
-															<a href="winery.html"><img src="http://placehold.it/200x100/E49800/ffffff.png&text=winery" width="200" height="100" /></a>
-															<a href="wedding.html"><img src="http://placehold.it/200x100/E4247E/ffffff.png&text=wedding" width="200" height="100" /></a>
-															</div>
-														</div>
-
-
-
-										</div> <!-- End Grid -->
-										</body>
-										</html>
+</div> <!-- End Grid -->
+</body>
+</html>
