--- a/LF.html
+++ b/LF.html
@@ -24,7 +24,8 @@ href="images/exclamation_point.png">
 	<div class="col_12">
 		<header>
 			<div class="center">
-				<ul class="button-bar">
+				<ul class="menu">
+					<li><a href="index.html">Home</a><li>
 					<li><a href="gym.html">Gym</a></li>
 					<li><a href="dentist.html"> Dentist</a></li>
 					<li><a href="winery.html"> Winery</a></li>
@@ -60,6 +61,7 @@ href="images/exclamation_point.png">
 		<div class="center">
 			<div class="center">
 				<ul class="button-bar">
+					<li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
 					<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
 					<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
 					<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
