--- a/dentist.html
+++ b/dentist.html
@@ -24,7 +24,8 @@ href="images/exclamation_point.png">
 			<div class="col_12">
 				<header>
 					<div class="center">
-						<ul class="button-bar">
+						<ul class="menu">
+							<li><a href="index.html">Home</a><li>
 							<li><a href="gym.html">Gym</a></li>
 							<li><a href="dentist.html"> Dentist</a></li>
 							<li><a href="winery.html"> Winery</a></li>
@@ -45,7 +46,7 @@ href="images/exclamation_point.png">
 								</div>
 								<div class="col_6">
 									<h3 class="center">After</h3>
-									<a href="https://sfc-dentist.netlify.com/index.html" target="_blank"><img src="assets/dentist/dentist_after.png"></a>
+								<img src="assets/dentist/dentist_after.png">
 								</div>
 					</div>
 
@@ -54,6 +55,7 @@ href="images/exclamation_point.png">
 					<footer>
 						<div class="center">
 							<ul class="button-bar">
+								<li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
 								<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
 								<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
 								<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
