--- a/eer.html
+++ b/eer.html
@@ -24,7 +24,8 @@ href="images/exclamation_point.png">
 	<div class="col_12">
 		<header>
 			<div class="center">
-				<ul class="button-bar">
+				<ul class="menu">
+					<li><a href="index.html">Home</a><li>
 					<li><a href="gym.html">Gym</a></li>
 					<li><a href="dentist.html"> Dentist</a></li>
 					<li><a href="winery.html"> Winery</a></li>
@@ -36,7 +37,7 @@ href="images/exclamation_point.png">
 			</div>
 		</header>
 		<h1 class="center">Exit Escape Room Redesign</h1>
-			<p>Exit Escape Room is an escape room company located in New York City. Initially, the website was a jumble of colors and text without much order. Most importantly, it was difficult to read more about the games. I updated the main page layout, creating an exciting landing page with a clear call to action. Then I built a separate page to feature the different escape rooms. Click the tabs below to see before and after images of each page.</p>
+			<p>Exit Escape Room is an escape room company located in New York City. Initially, the website was a jumble of colors and text without much order. Most problematically, it was difficult to read more about the games. I updated the main page layout, creating an exciting landing page with a clear call to action. Then, I built a separate page to feature the different escape rooms. Click the tabs below to see before and after images of each page.</p>
 
 		<ul class="tabs center">
 			<li><a href="#tabr1">Home</a></li>
@@ -96,6 +97,7 @@ href="images/exclamation_point.png">
 		<div class="center">
 			<div class="center">
 				<ul class="button-bar">
+					<li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
 					<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
 					<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
 					<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
