--- a/wedding.html
+++ b/wedding.html
@@ -24,7 +24,8 @@ href="images/exclamation_point.png">
 	<div class="col_12">
 		<header>
 			<div class="center">
-				<ul class="button-bar">
+				<ul class="menu">
+					<li><a href="index.html">Home</a><li>
 					<li><a href="gym.html">Gym</a></li>
 					<li><a href="dentist.html"> Dentist</a></li>
 					<li><a href="winery.html"> Winery</a></li>
@@ -38,13 +39,6 @@ href="images/exclamation_point.png">
 		<h1 class="center">Wedding Planner Redesign</h1>
 			<p>bon soirée offers full service wedding planning. Initially, the website was difficult to navigate on a mobile device, lacked fluidity in its design, and didn't showcase the planner's amazing work. I updated the logo, consolidated the multi-page website into a single-page layout, and made it responsive. Click the tabs below to see before and after images of each page.</p>
 
-		<ul class="tabs center">
-			<li><a href="#tabr1">Home</a></li>
-			<li><a href="#tabr2">About</a></li>
-			<li><a href="#tabr3">Bio</a></li>
-			<li><a href="#tabr4">Contact</a></li>
-
-		</ul>
 
 	</div>
 
@@ -53,41 +47,8 @@ href="images/exclamation_point.png">
 			<div class="col_6">
 				<h3 class="center">Before</h3>
 				<img src="assets/wedding/wedding-home.png">
-			</div>
-			<div class="col_6">
-				<h3 class="center">After</h3>
-				<a href="https://sfc-wedding.netlify.com/index.html" target="_blank"><img src="assets/wedding/wedding-after.png"></a>
-			</div>
-		</div>
-
-		<div id="tabr2" class="tab-content">
-
-			<div class="col_6">
-				<h3 class="center">Before</h3>
 				<img src="assets/wedding/wedding-about.png">
-			</div>
-			<div class="col_6">
-				<h3 class="center">After</h3>
-				<img src="assets/wedding/wedding-after.png">
-			</div>
-		</div>
-
-		<div id="tabr3" class="tab-content">
-
-			<div class="col_6">
-				<h3 class="center">Before</h3>
 				<img src="assets/wedding/wedding-diane.png">
-			</div>
-			<div class="col_6">
-				<h3 class="center">After</h3>
-				<img src="assets/wedding/wedding-after.png">
-			</div>
-		</div>
-
-		<div id="tabr4" class="tab-content">
-
-			<div class="col_6">
-				<h3 class="center">Before</h3>
 				<img src="assets/wedding/wedding-contact.png">
 			</div>
 			<div class="col_6">
@@ -95,10 +56,13 @@ href="images/exclamation_point.png">
 				<img src="assets/wedding/wedding-after.png">
 			</div>
 		</div>
+
+
 		<footer>
 		<div class="center">
 			<div class="center">
 				<ul class="button-bar">
+					<li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
 					<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
 					<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
 					<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
