--- a/gym.html
+++ b/gym.html
@@ -22,10 +22,14 @@ href="images/exclamation_point.png">
 </head>
 <body>
 <div class="grid">
+	<!-- <div class="col_12">
+		<i class="fas fa-hand"></i>Hi!
+	</div> -->
 	<div class="col_12">
 		<header>
 			<div class="center">
-				<ul class="button-bar">
+				<ul class="menu">
+					<li><a href="index.html">Home</a><li>
 					<li><a href="gym.html">Gym</a></li>
 					<li><a href="dentist.html"> Dentist</a></li>
 					<li><a href="winery.html"> Winery</a></li>
@@ -49,7 +53,6 @@ href="images/exclamation_point.png">
 			<li><a href="#tabr6">New Happenings</a></li>
 			<li><a href="#tabr5">Contact</a></li>
 		</ul>
-
 	</div>
 
 		<div id="tabr1" class="tab-content">
@@ -166,6 +169,7 @@ href="images/exclamation_point.png">
 	<footer>
 		<div class="center">
 			<ul class="button-bar">
+				<li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
 				<li><a href="gym.html"><i class="fas fa-dumbbell"></i> Gym</a></li>
 				<li><a href="dentist.html"><i class="fas fa-tooth"></i> Dentist</a></li>
 				<li><a href="winery.html"><i class="fa fa-wine-bottle"></i> Winery</a></li>
