--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ href="images/exclamation_point.png">
   </div>
   <div class="col_4 center">
       <i class="fas fa-lightbulb fa-5x"></i>
-      <p>Sometimes when I get bored, I'll spend a night or two redesigning a website that needs some love.</p>
+      <p>Occassionally, I'll spend a night or two redesigning a website that needs some love.</p>
   </div>
   <div class="col_4 center">
       <i class="fas fa-hand-point-up fa-5x"></i>
