--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@ href="images/exclamation_point.png">
   </div>
   <div class="col_12">
       <h1 class="center">Hello!</h1>
+  <div class="col_12">
+    <!-- Slideshow -->
+    <ul class="slideshow">
+    <li><img src="assets/home/dentist-before-after.png"/></li>
+    <li><img src="assets/home/LF-before-after.png"/></li>
+    <li><img src="assets/home/eer-before-after.png"/></li>
+    </ul>
   </div>
   <div class="col_4 center">
     <i class="fas fa-hand-peace fa-5x"></i>
@@ -50,10 +57,9 @@ href="images/exclamation_point.png">
   </div>
   <div class="col_4 center">
       <i class="fas fa-hand-point-up fa-5x"></i>
-      <p>Check out before + after photos via the links above.</p>
+      <p>Check out before + after descriptions and photos via the links above.</p>
   </div>
 
-  <hr>
 
 </div> <!-- End Grid -->
 </body>
