--- a/LF.html
+++ b/LF.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- META -->
-	<title>ShanazFC - Wedding Redesign</title>
+	<title>ShanazFC - La Fromagerie Redesign</title>
 <link rel="icon"
 type="image/png"
 href="images/exclamation_point.png">
