--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- META -->
-  <title>ShanazFC - Dentist Redesign</title>
+  <title>ShanazFC - Redesign Gallery</title>
 <link rel="icon"
 type="image/png"
 href="images/exclamation_point.png">
